package com.company;

public enum BankAccountType {
    CORPORATE,
    CONSUMER;
}
